ingresses/2-hubgtw/overlays/external-graphql/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-graphql
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.localdemo.mageekbox.eu`) && PathPrefix(`/countries`)
      services:
        - name: countries-graphql-api-external-service
          port: 443
          passHostHeader: false
      middlewares:
        - name: graphql-drl
        - name: graphql-cors
        - name: graphql-stripprf
  tls:
